--- a/index.html
+++ b/index.html
@@ -38,72 +38,72 @@
     <div class="gallery">
       <div class="galleryItem">
         <img
-          src="https://images.unsplash.com/photo-1634170380003-3e3e3e3e3e3e"
-          alt=""
+          src="https://images.pexels.com/photos/20170974/pexels-photo-20170974/free-photo-of-boat-on-sea.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="boat"
         />
         <h3>Image</h3>
         <p>Unsplash</p>
       </div>
       <div class="galleryItem">
         <img
-          src="https://images.unsplash.com/photo-1634170380003-3e3e3e3e3e3e"
-          alt=""
+          src= "https://images.pexels.com/photos/17969770/pexels-photo-17969770/free-photo-of-basketball.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="basketball"
         />
         <h3>Image</h3>
         <p>Unsplash</p>
       </div>
       <div class="galleryItem">
         <img
-          src="https://images.unsplash.com/photo-1634170380003-3e3e3e3e3e3e"
-          alt=""
+          src="https://images.pexels.com/photos/3489072/pexels-photo-3489072.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="Moon"
         />
         <h3>Image</h3>
         <p>Unsplash</p>
       </div>
       <div class="galleryItem">
         <img
-          src="https://images.unsplash.com/photo-1634170380003-3e3e3e3e3e3e"
-          alt=""
+          src="https://images.pexels.com/photos/11739206/pexels-photo-11739206.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="Sigma"
         />
         <h3>Image</h3>
         <p>Unsplash</p>
       </div>
       <div class="galleryItem">
         <img
-          src="https://images.unsplash.com/photo-1634170380003-3e3e3e3e3e3e"
-          alt=""
+          src="https://images.pexels.com/photos/13811652/pexels-photo-13811652.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="deer"
         />
         <h3>Image</h3>
         <p>Unsplash</p>
       </div>
       <div class="galleryItem">
         <img
-          src="https://images.unsplash.com/photo-1634170380003-3e3e3e3e3e3e"
-          alt=""
+          src="https://images.pexels.com/photos/19039431/pexels-photo-19039431/free-photo-of-palm-and-clouds.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="tree"
         />
         <h3>Image</h3>
         <p>Unsplash</p>
       </div>
       <div class="galleryItem">
         <img
-          src="https://images.unsplash.com/photo-1634170380003-3e3e3e3e3e3e"
-          alt=""
+          src="https://images.pexels.com/photos/19381567/pexels-photo-19381567/free-photo-of-ukulele-leaning-on-a-tree.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="ukelele"
         />
         <h3>Image</h3>
         <p>Unsplash</p>
       </div>
       <div class="galleryItem">
         <img
-          src="https://images.unsplash.com/photo-1634170380003-3e3e3e3e3e3e"
-          alt=""
+          src="https://images.pexels.com/photos/20180656/pexels-photo-20180656/free-photo-of-woman-walking-behind-colonnade.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="Tunne;"
         />
         <h3>Image</h3>
         <p>Unsplash</p>
       </div>
       <div class="galleryItem">
         <img
-          src="https://images.unsplash.com/photo-1634170380003-3e3e3e3e3e3e"
-          alt=""
+          src="https://images.pexels.com/photos/20188447/pexels-photo-20188447/free-photo-of-two-seagulls-flying-in-the-sky.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="birds"
         />
         <h3>Image</h3>
         <p>Unsplash</p>
